# uv-template

./: .gitignore  covplugin.py  init.sh  plugins.json  pyproject.toml  pytest.toml  release.sh  ruff.toml  uv.toml
.github/workflows/: release.yaml  run_and_test.yaml
