[project]
name = "uv-project"
version = "0.1.0"
description = "Awesome description!"
readme = "README.md"
authors = [
    { name = "Pependr", email = "antonkudrikov88@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []


[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]


[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"


[tool.uv.build-backend]
module-root = "src"
module-name = "uv-project"
source-include = ["tests/**", "README.md"]


[tool.uv]
cache-dir = "./.uv_cache"
cache-keys = [
    { git = { commit = true } },
    { file = "pyproject.toml" },
    { dir = "src" },
]


[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
strict = true


[tool.ruff.format]
exclude = [
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    ".uv_cache",
    ".venv",
    "__pycache__",
    "uv.lock",
]
indent-style = "tab"
quote-style = "double"
nested-string-quote-style = "preferred"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 100



[tool.ruff.lint]
ruff = { "parenthesize-tuple-in-subscript" = true }
pylint = { "max-nested-blocks" = 4, "max-args" = 4 }
pyupgrade = { "keep-runtime-typing" = true }
typing-extensions = false


[tool.ruff]
line-length = 80
indent-width = 4
output-format = "github"
src = ["src", "tests"]
target-version = "py314"